--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,35 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-poppins: 'Poppins', sans-serif;
+
+  /* Brand Colors */
+    --color-primary: #1e40af;
+    /* A deep blue for primary actions */
+    --color-secondary: #06b6d4;
+    /* A vibrant teal for highlights */
+  
+    /* Text Colors */
+    --color-text-base: #1f2937;
+    /* A dark gray for body text */
+    --color-text-light: #6b7280;
+    /* A lighter gray for secondary text */
+  
+    /* Background Colors */
+    --color-bg-light: #f9fafb;
+    /* A light background color */
+    --color-bg-dark: #111827;
+    /* A dark background color */
 }
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/Poppins-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 
 @theme inline {
   --color-background: var(--background);
@@ -22,5 +50,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins);
 }
